--- a/src/index.css
+++ b/src/index.css
@@ -82,3 +82,28 @@ img {
 .text-muted {
   color: var(--color-gray);
 }
+
+.search-bar {
+  background: var(--color-light);
+  border-radius: var(--border-radius);
+  padding: var(--search-padding);
+  white-space: nowrap;
+}
+
+.search-bar input[type="search"] {
+  background: transparent;
+  width: 30vw;
+  margin-left: 1rem;
+  font-size: 0.9rem;
+  color: var(--color-dark);
+}
+
+.search-bar input[type="search"]::placeholder {
+  color: var(--color-gray);
+}
+
+@media screen and (max-width: 1200px) {
+  .container {
+    width: 96%;
+  }
+}
